--- a/stylesheets/demo.css
+++ b/stylesheets/demo.css
@@ -1,9 +1,15 @@
+.hidden {
+    display: none;
+}
+
 #demo #filters * {
     display: inline-block;
 }
 
 #demo [disabled] {
     cursor: not-allowed;
+    color: #BBBFC2;
+    border-color: #BBBFC2;
 }
 
 #demo th span {
@@ -15,6 +21,10 @@
     border-radius: 4px;
     border: 1px solid;
     margin-right: 7px;
+}
+
+#demo [type="submit"] {
+    padding: 0.3em 2.5em;
 }
 
 #demo table {
